# Trash

./: .gitattributes  .gitignore  main.fs
*** WEB/: GetUrl.py  main.cpp  ssh.py
15 Puzzle/: index.html
15 Puzzle Img Pre/: main.cpp
2048 test/: index.html
AUTO_HOTKEY/: exif_copy.ahk  launcher.ahk  wav_to_cue.ahk
About Vapour Synth/: 2x.py  2x.vpy  Usage.bat  ffmpeg.bat
About Wget/: main.sh
About WordPress/: functions.php  header.php
About oh-my-zsh/: VmUbuntu.sh  WslUbuntu.sh  setup.sh
About エンジニアが死滅シタ世界/: お金が引き出せない銀行.fs  アンドロイドの生産工場.fs  学べない学校.fs  有名なプールサイド.fs  機械の総合病院.fs  砂漠の公園.fs  荒れ果てたオフィス.fs  荒れ果てたショップ.fs  荒れ果てた警察署.fs  錆びついた電波塔.fs  隔離された街のゲート.fs  高層タワー.fs
Aj Chat/: Main.java  index.html
Android Dr.com/: main.py
Arduino Web Server/: main.ino
Auto Index Downloader/: main.fs
AutoHotkey/: exif_copy.ahk  launcher.ahk  wav_to_cue.ahk
Base32 Decode/: main.cs
Base64String To String/: main.fs
Boost Pwm Test/: main.ino
BullsAndCows Ver.I/: main.c  main.cpp  main.unity.cs
C# Console Application in System Tray/: main.cs
C# IceKey Ver.I/: main.cs
CTF Tools/: main.fs
Caculator Ver.I/: lib.cs  main.cs
Caculator Ver.II/: main.cs
Change Screen Resolution in Kali Linux on Raspberry Pi 3/: main.sh
Change Screen Resolutions on Raspberry Pi/: main.sh
Cmake in Debian/: main.sh
CmdLibrary/: main.cpp
Code::Blocks on Raspberry Pi 3/: main.sh
ConwaysGameOfLife/: ConwaysGameOfLife.cpp  ConwaysGameOfLife.h  WindowsApp.cpp  WindowsApp.h  main.cpp
CudaFuckMd5/: fucker.cu  fucker.h  main.cpp
Cue Ver.I/: main.cs
Debian uudecode/: main.sh
Dex2jar Ver.I/: MainWin.xaml  MainWin.xaml.cs
Directory Flattener/: main.fs
Directory Walker/: main.fs
Distributed Encoder Master Ver.I/: Config.xml  main.cs
DoS/: main.fs
Downloader Async Stable/: main.fs
Downloader Ver.I/: MainWin.xaml  MainWin.xaml.cs
Downloader Ver.II/: main.cs
Downloader Ver.III/: main.cs
Easy Filename/: main.fs  main.py
Easy Filename By Path85/: main.fs
EasyMatMarker/: .gitignore  README.md  test.ps1  test.py
Echo/: script0.cs
Elliptic Curve Cryptography K Calculator/: secp256k1.py
FFmpeg Allocator/: anima,avc,yuv420p10le,ultrafast,qp0,upto60fps.config  anima,avc,yuv420p10le,压制,colorspace=bt709.config  anima,avc,yuv420p10le,压制.config  generic,avc,yuv420p10le,crf15,veryslow,smpte170m.config  main.cs
FFmpeg Scheduler/: main.cpp
FFmpeg on Raspberry Pi 3/: main.sh
FSharpUtils/: FSharpUtils.fs
Fenham Cipher Decoder/: main.fs
File Md5 Database/: CMakeLists.txt  install.sh  main.cpp
File Random Selector/: main.fs
Fuck Android Dr.com/: App.fs  App.xaml  MainWindows.xaml.fs
Fuck Android DrCom Ex/: MainWindow.xaml  MainWindow.xaml.fs
Fuck Everything/: FuckEverything.php
Fuck Mooc/: main.py
Fuck Pc Dr Com/: AndroidManifest.xml  Main.axml  MainActivity.fs  Strings.xml
Fuck RSA/: main.py  main.sage
Fuck SE/: main.fs
Fuck lkdsyxywx.xcht.cc/: import.sql  main.cpp
FuckAlliedmaker/: main.py
Fuckin' Log/: main.fs
Image Reviewer/: CMakeLists.txt  main.cpp
ZipCracker/: CMakeLists.txt  CRC.h  Cuda.cu  Cuda.h  main.cpp
pdf2json/: CMakeLists.txt  JsonDevice.h  Pdf2Json.h  main.cpp
qq_mht_to_sqlite/: Cargo.toml  main.rs
u7yb/vr/: CMakeLists.txt  Dockerfile  Http.h  Net.h  Video.h  append.py  pass_comb.py  pre_check.py  split.py
(+1042 files in other folders)
