[package]
name = "qq_mht_to_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.5.0"
base64 = "0.13.1"
# csv = "1.1.6"
serde_json = "1.0.87"
rusqlite = { version = "0.28.0", features = ["bundled"] }
regex = "1.7.0"
md5 = "0.7.0"
